// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination snapshot tests renders correctly with page that is last page of slide should render next slide 1`] = `
<Fragment>
  <styled.div>
    <button
      data-testid="back"
      onClick={[Function]}
    >
      prev
    </button>
    <styled.ul>
      <styled.li
        data-testid="5"
        isSelected={true}
        key="5"
        onClick={[Function]}
        pagesOnSlide={5}
      >
        5
      </styled.li>
      <styled.li
        data-testid="6"
        isSelected={false}
        key="6"
        onClick={[Function]}
        pagesOnSlide={5}
      >
        6
      </styled.li>
      <styled.li
        data-testid="7"
        isSelected={false}
        key="7"
        onClick={[Function]}
        pagesOnSlide={5}
      >
        7
      </styled.li>
      <styled.li
        data-testid="8"
        isSelected={false}
        key="8"
        onClick={[Function]}
        pagesOnSlide={5}
      >
        8
      </styled.li>
      <styled.li
        data-testid="9"
        isSelected={false}
        key="9"
        onClick={[Function]}
        pagesOnSlide={5}
      >
        9
      </styled.li>
      <styled.li
        data-testid="10"
        isSelected={false}
        key="10"
        onClick={[Function]}
        pagesOnSlide={5}
      >
        10
      </styled.li>
    </styled.ul>
    <button
      data-testid="next"
      onClick={[Function]}
    >
      next
    </button>
  </styled.div>
</Fragment>
`;

exports[`Pagination snapshot tests renders correctly with pages 1`] = `
<Fragment>
  <styled.div>
    <styled.ul>
      <styled.li
        data-testid="1"
        isSelected={true}
        key="1"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        1
      </styled.li>
      <styled.li
        data-testid="2"
        isSelected={false}
        key="2"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        2
      </styled.li>
      <styled.li
        data-testid="3"
        isSelected={false}
        key="3"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        3
      </styled.li>
      <styled.li
        data-testid="4"
        isSelected={false}
        key="4"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        4
      </styled.li>
      <styled.li
        data-testid="5"
        isSelected={false}
        key="5"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        5
      </styled.li>
    </styled.ul>
    <button
      data-testid="next"
      onClick={[Function]}
    >
      next
    </button>
  </styled.div>
</Fragment>
`;

exports[`Pagination snapshot tests renders correctly with pages at last page 1`] = `
<Fragment>
  <styled.div>
    <button
      data-testid="back"
      onClick={[Function]}
    >
      prev
    </button>
    <styled.ul>
      <styled.li
        data-testid="1"
        isSelected={false}
        key="1"
        onClick={[Function]}
        pagesOnSlide={3}
      >
        1
      </styled.li>
      <styled.li
        data-testid="2"
        isSelected={false}
        key="2"
        onClick={[Function]}
        pagesOnSlide={3}
      >
        2
      </styled.li>
      <styled.li
        data-testid="3"
        isSelected={false}
        key="3"
        onClick={[Function]}
        pagesOnSlide={3}
      >
        3
      </styled.li>
      <styled.li
        data-testid="4"
        isSelected={true}
        key="4"
        onClick={[Function]}
        pagesOnSlide={3}
      >
        4
      </styled.li>
    </styled.ul>
  </styled.div>
</Fragment>
`;

exports[`Pagination snapshot tests renders correctly with pages at page 2 and back button 1`] = `
<Fragment>
  <styled.div>
    <button
      data-testid="back"
      onClick={[Function]}
    >
      prev
    </button>
    <styled.ul>
      <styled.li
        data-testid="1"
        isSelected={false}
        key="1"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        1
      </styled.li>
      <styled.li
        data-testid="2"
        isSelected={true}
        key="2"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        2
      </styled.li>
      <styled.li
        data-testid="3"
        isSelected={false}
        key="3"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        3
      </styled.li>
      <styled.li
        data-testid="4"
        isSelected={false}
        key="4"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        4
      </styled.li>
      <styled.li
        data-testid="5"
        isSelected={false}
        key="5"
        onClick={[Function]}
        pagesOnSlide={4}
      >
        5
      </styled.li>
    </styled.ul>
    <button
      data-testid="next"
      onClick={[Function]}
    >
      next
    </button>
  </styled.div>
</Fragment>
`;

exports[`Pagination snapshot tests renders correctly without pages 1`] = `<Fragment />`;
